# 2350-vibe-synth

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/drivers/: button.hpp  display.hpp  pwm.hpp  quadrature_encoder.hpp
lib/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.pio
src/: log.h  main.cpp  synth.cpp  synth.h  synth_params.h  voice_manager.h
src/ui/: display.h  encoder_accel.hpp  ui.cpp  ui.h
src/ui/render/: render.c  render.h
